Remove resume viewer and related styles
Removed resume viewer styles and functionality from index.html.

--- a/index.html
+++ b/index.html
@@ -128,93 +128,7 @@ nav a:hover::after { width: 100%; }
 .hero p { margin: 15px 0; font-size: 1.4rem; font-weight: 300; color: var(--text-light); }
 .hero button { padding: 12px 25px; background: var(--cyan-accent); color: var(--bg-dark); border: none; border-radius: 30px; font-size: 1rem; cursor: pointer; transition: 0.3s; font-weight: 600; }
 .hero button:hover { transform: scale(1.1); background: var(--cyan-glow); }
-
-/* ===== NEW RESUME STYLES ===== */
-#resume {
-    text-align: center;
-}
-
-.resume-btn {
-    display: inline-block;
-    padding: 12px 25px;
-    background: var(--cyan-accent);
-    color: var(--bg-dark);
-    border: none;
-    border-radius: 30px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: 0.3s;
-    font-weight: 600;
-    text-decoration: none; /* Removes underline from the <a> tag */
-}
-.resume-btn:hover {
-    transform: scale(1.1);
-    background: var(--cyan-glow);
-}
-
-/* --- ADDED CSS FOR POP-UP VIEWER --- */
-.resume-options {
-    text-align: center;
-    margin-bottom: 30px;
-    display: flex; /* Arrange buttons side-by-side */
-    justify-content: center; /* Center them */
-    gap: 20px; /* Space between buttons */
-    flex-wrap: wrap; /* Allow wrapping on smaller screens */
-}
-
-.resume-image-viewer {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay on top */
-    z-index: 2000; /* High z-index to be above everything */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 20px;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.resume-image-viewer.visible {
-    display: flex;
-    opacity: 1;
-}
-
-.resume-image-viewer img {
-    max-width: 90%;
-    max-height: 90vh; /* Max height relative to viewport height */
-    border-radius: 10px;
-    box-shadow: 0 0 30px rgba(0, 229, 255, 0.6); /* Cyan glow shadow */
-    object-fit: contain; /* Ensure the image fits without distortion */
-}
-
-.close-resume-viewer {
-    position: absolute;
-    top: 20px;
-    right: 35px;
-    color: var(--cyan-glow);
-    font-size: 50px;
-    font-weight: bold;
-    cursor: pointer;
-    background: none;
-    border: none;
-    transition: color 0.3s ease, transform 0.3s ease;
-}
-
-.close-resume-viewer:hover,
-.close-resume-viewer:focus {
-    color: white;
-    transform: scale(1.1);
-}
-/* ===== END OF RESUME STYLES ===== */
-
 section { padding: 80px 20px; max-width: 1200px; margin: auto; }
-/* (Removed duplicate section style) */
 h2 { margin-bottom: 20px; text-align: center; font-size: 2.3rem; font-weight: 700; color: var(--cyan-glow); text-shadow: 0 0 10px rgba(0, 229, 255, 0.4); }
 .skills { display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 20px; }
 .skill { background: rgba(0, 229, 255, 0.1); border: 1px solid var(--cyan-accent); color: var(--text-light); padding: 10px 20px; margin: 5px; border-radius: 8px; transition: background 0.3s ease, transform 0.2s ease, border-color 0.3s; display: inline-block; cursor: pointer; font-weight: 500; }
@@ -377,20 +291,6 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
     .projects {
         grid-template-columns: 1fr;
     }
-    
-    /* --- ADDED RESUME VIEWER STYLES FOR MOBILE --- */
-    .resume-options {
-        flex-direction: column; /* Stack buttons vertically */
-    }
-    .resume-image-viewer img {
-        max-width: 95%; /* Take more width on smaller screens */
-        max-height: 85vh; /* Adjust height */
-    }
-    .close-resume-viewer {
-        font-size: 40px;
-        top: 15px;
-        right: 20px;
-    }
 }
 
 @media (max-width: 480px) {
@@ -439,7 +339,6 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                 <a href="#education">Education</a>
                 <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
-                <a href="#resume">Resume</a>
                 <a href="#contact">Contact</a>
             </nav>
             <span class="hamburger" onclick="toggleSidebar()">☰</span>
@@ -450,7 +349,6 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
-            <a href="#resume">Resume</a>
             <a href="#contact">Contact</a>
         </div>
 
@@ -515,7 +413,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                         <p>Junior and Middle School(2014 - 2018)</p>
                         <p>Completed my schooling with strong academic results, maintaining good performance throughout.</p>
 
-                  _ </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -586,7 +484,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                     </div>
                 </div>
                 <div class="project">
-      _             <img src="photos/s3.png" alt="Project 4">
+                    <img src="photos/s3.png" alt="Project 4">
                     <div class="project-content">
                         <h3>Portfolio For Anmol Srivastava</h3>
                         <p>This is my personal portfolio website showcasing my skills, projects, and achievements.</p>
@@ -596,23 +494,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
             </div>
         </section>
 
-                <section id="resume">
-            <h2>My Resume</h2>
-            <p style="text-align:center; margin-bottom: 25px;">
-                Choose an option to view or download my resume:
-            </p>
-            <div class="resume-options">
-                <button class="resume-btn" onclick="showResumeImage()">View Resume</button>
-                <a href="photos/Anmol_Srivastava_Resume_BW.docx" target="_blank" class="resume-btn download-btn">Download Resume</a>
-            </div>
-
-            <div id="resume-image-viewer" class="resume-image-viewer">
-                <img id="resume-img" src="photos/anmolres.png" alt="Anmol Srivastava's Resume" class="active">
-                <button class="close-resume-viewer" onclick="hideResumeImage()">×</button>
-  V         </div>
-        </section>
-
-                <section id="contact">
+        <section id="contact">
             <h2>Contact Me</h2>
             <p style="text-align:center; margin-bottom:20px;">
                 Have a project idea or just want to say hi? Fill out the form or reach me on social media.
@@ -640,7 +522,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                         <img src="photos/gtb.png" alt="GitHub">
                     </a>
                     <a href="https://www.linkedin.com/in/anmol-srivastava-46430727a/" target="_blank" class="social-btn linkedin">
-            _           <img src="photos/lkd.png" alt="LinkedIn">
+                        <img src="photos/lkd.png" alt="LinkedIn">
                     </a>
                     <a href="https://www.instagram.com/anmol_sriv.073/" target="_blank" class="social-btn instagram">
                         <img src="photos/insta.png" alt="Instagram">
@@ -667,7 +549,7 @@ footer { background: rgba(0, 0, 0, 0.7); padding: 20px; text-align: center; marg
                     typedTextElement.textContent += textToType.charAt(charIndex);
                     charIndex++;
                     setTimeout(typeText, typingSpeed);
-warning             }
+                }
             }
 
             // Particles.js configuration for a professional network effect
@@ -688,7 +570,7 @@ warning             }
                     move: { enable: true, speed: 1, direction: "none", random: true, straight: false, out_mode: "out", bounce: false }
                 },
                 interactivity: {
-              s     detect_on: "canvas",
+                    detect_on: "canvas",
                     events: { onhover: { enable: true, mode: "grab" }, onclick: { enable: false } },
                     modes: { grab: { distance: 140, line_linked: { opacity: 1 } } }
                 },
@@ -697,7 +579,7 @@ warning             }
             
             // Start typing effect immediately
             typeText();
-          _  
+            
             // Play background music
             const bgMusic = document.getElementById("bg-music");
             bgMusic.muted = false;
@@ -717,7 +599,7 @@ warning             }
             const clickedCert = document.getElementById(certId);
 
             // If the clicked cert is already active, hide it and do nothing else
-  B         if (clickedCert.classList.contains("active")) {
+            if (clickedCert.classList.contains("active")) {
                 clickedCert.classList.remove("active");
                 return;
             }
@@ -732,57 +614,28 @@ warning             }
         const form = document.querySelector('.contact-form');
         const successMsg = document.getElementById('form-success');
         form.addEventListener('submit', function(e) {
-          s e.preventDefault();
+            e.preventDefault();
             const formData = new FormData(form);
             fetch(form.action, {
                 method: form.method,
                 body: formData,
                 headers: { 'Accept': 'application/json' }
-s         })
+            })
             .then(response => {
                 if (response.ok) {
                     successMsg.style.display = 'block';
                     form.reset();
                 } else {
-                s   alert('Oops! There was a problem.');
+                    alert('Oops! There was a problem.');
                 }
             });
         });
 
         function toggleSidebar() {
             const sidebar = document.getElementById("mySidebar");
-D           sidebar.style.width = (sidebar.style.width === "250px") ? "0" : "250px";
+            sidebar.style.width = (sidebar.style.width === "250px") ? "0" : "250px";
         }
-
-                function showResumeImage() {
-            const resumeImageViewer = document.getElementById("resume-image-viewer");
-            resumeImageViewer.style.display = "flex"; // Make it visible
-            setTimeout(() => { // Use a timeout to allow display change before transition
-                resumeImageViewer.classList.add("visible");
-s         }, 10); // Small delay
-        }
-
-        function hideResumeImage() {
-            const resumeImageViewer = document.getElementById("resume-image-viewer");
-            resumeImageViewer.classList.remove("visible");
-            setTimeout(() => { // Hide after transition
-                resumeImageViewer.style.display = "none";
-            }, 300); // Match transition duration
-        }
-
-        // Close resume viewer if escape key is pressed
-        document.addEventListener('keydown', function(event) {
-            if (event.key === "Escape") {
-                hideResumeImage();
-            }
-        });
-
-        // Close resume viewer if clicking outside the image (on the overlay)
-        document.getElementById('resume-image-viewer').addEventListener('click', function(event) {
-            if (event.target === this) { // Only close if the click is directly on the overlay
-C               hideResumeImage();
-            }
-        });
-        C   </script>
+    </script>
 </body>
 </html>
+
